<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="meme_view">Main View for Meme</string>
    <string name="app_name">BUMMemeMaker</string>
    <string name="save_confirm">Do you want to save this meme?</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_title">SAVE</string>
    <string name="save_button">Save</string>
    <string name="hint_top_text">Insert top text here.....</string>
    <string name="hint_bottom_text">Insert bottom text here.....</string>
    <string name="name_exist">A file with same name exists. Do you want to overwrite it?</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="settings_menu">Settings</string>
    <string name="about_menu">About Developer</string>
    <string name="license">Copyright 2014 YeMyatThu

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="help_meme">Explanation</string>
    <string name="meme_list_title">Popular Memes</string>
    <string name="name">Name</string>
    <string name="open_gallery">Add From Gallery</string>
    <string name="image_picker_title">Select Picture</string>
    <string name="help_custom_image">You know more than me about your image!</string>
    <string name="top_custom_example">No example for custom image!</string>
    <string name="save_custom_meme">YourMeme</string>
    <string name="favorite_meme_title">Favorite Memes</string>
    <string name="favorite_button">Favorite</string>
    <string name="myanmar_meme_title">Myanmar Memes</string>
    <string name="add_template">Add</string>
    <string name="add_confirm">Are you sure you want to add this to template?</string>
    <string name="custom_meme_title">Custom Memes</string>
    <string name="empty_list">Meme List is empty. Please add some.</string>
</resources>
